tests/interface/top.js
declare var x : mixed;

( x : interface {} ); // error

( undefined : interface {} ); // error
